--- a/package.json
+++ b/package.json
@@ -24,5 +24,30 @@
   "bugs": {
     "url": "https://github.com/bendrucker/angular-router-exception-handler/issues"
   },
-  "homepage": "https://github.com/bendrucker/angular-router-exception-handler"
+  "homepage": "https://github.com/bendrucker/angular-router-exception-handler",
+  "peerDependencies": {
+    "angular": "^1.2.0"
+  },
+  "devDependencies": {
+    "angular": "~1.3.5",
+    "angular-mocks": "~1.3.5",
+    "chai": "~1.10.0",
+    "karma": "~0.12.28",
+    "karma-browserify": "~1.0.0",
+    "karma-mocha": "~0.1.10",
+    "karma-phantomjs-launcher": "~0.1.4",
+    "mocha": "~2.0.1"
+  },
+  "dependencies": {
+    "browserify": "~7.0.0",
+    "browserify-shim": "~3.8.1"
+  },
+  "browserify": {
+    "transform": [
+      "browserify-shim"
+    ]
+  },
+  "browserify-shim": {
+    "angular": "global:angular"
+  }
 }
