--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "chai": "~1.10.0",
     "karma": "~0.12.28",
     "karma-browserify": "~1.0.0",
+    "karma-cli": "0.0.4",
     "karma-mocha": "~0.1.10",
     "karma-phantomjs-launcher": "~0.1.4",
     "mocha": "~2.0.1"
