--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "homepage": "https://github.com/bendrucker/angular-router-exception-handler",
   "peerDependencies": {
-    "angular": "^1.2.0"
+    "angular": "1"
   },
   "devDependencies": {
     "angular": "~1.3.5",
